styles/main.css
/* Add reset styles here if needed */
body {
    background-color: rgb(44, 44, 44);
    color: rgb(201, 201, 201);
    text-align: center;
}

.header-container {
    background-color: rgb(45, 122, 97);
    display: grid;
    grid-template-columns: repeat(9, 1fr);
    grid-column-start: 4;
    margin-bottom: 60px;
}

.title {
}

.description {
}

.profile-img {
    display: block;
    margin-left: auto;
    margin-right: auto;
    max-height: 300px;
    max-width: 300px;
    border-radius: 100%;
}

.grid-container {
    background-color: rgb(45, 122, 97);
    display: grid;
    grid-template-columns: repeat(2, 1fr);
}

@media(max-width:540px) {
    .grid-container {
        grid-template-columns: repeat(1, 1fr);
    }

    .header-container {
        grid-template-columns: repeat(2, 1fr);
    }
}

.grid-item {
    background-color: rgb(45, 122, 97);
    padding: 20px;
}

a.grid-item {
    color: currentColor;
    text-decoration: none;
}

a.grid-item:visited {
    color: currentColor;
}

a.grid-item:active {
    background-color: rgb(19, 71, 55);
}

.footer-container {
}

